--- a/tfa_client/twitter-feeds/package.json
+++ b/tfa_client/twitter-feeds/package.json
@@ -2,6 +2,7 @@
   "name": "twitter-feeds",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8085",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
